overflow attempt fix

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,9 @@ body {
     .container h1 {
         font-size: 23px;
     }
+    .body {
+        overflow: hidden !important;
+    }
 }
 
 .button {
